--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "apexcharts": "^3.27.2",
     "axios": "^0.21.1",
     "chart.js": "^3.3.2",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
